<resources>
    <string name="app_name">HelpApp</string>
    <string name="logo_icon_description">logo_icon</string>
    <string name="logo_mss_description">logo_mss</string>
    <string name="background_rectangle_description">background_rectangle</string>
    <string name="category_image_description">category_image</string>
    <string name="category_title_description">category_title</string>
    <string name="loading_text">Загрузка</string>
    <string name="help_title">Помочь</string>
    <string name="search_text">Поиск</string>
    <string name="news_text">Новости</string>
    <string name="history_text">История</string>
    <string name="profile_text">Профиль</string>
    <string name="category_choice_title">Выберите категорию помощи</string>
    <string name="pf_exit_account">Выйти из аккаунта</string>
    <string name="pf_receive_push_notifications">Получать push-уведомления</string>
    <string name="pf_occupation">Сфера деятельности</string>
    <string name="pf_birthday">Дата рождения</string>
    <string name="pf_friends_title">Ваши друзья</string>
    <string name="sf_tab_title_events">По мероприятиям</string>
    <string name="sf_tab_title_NKO">По НКО</string>
    <string name="sf_search_hint">Введите название организации</string>
    <string name="sf_keywords_text">Ключевые слова: </string>
    <string name="sf_search_results_text">Результаты поиска: </string>
    <string name="pfd_photo_btn_title">Выбрать фото</string>
    <string name="pfd_make_photo_btn_title">Сделать снимок</string>
    <string name="pfd_delete_btn_title">Удалить</string>
    <string name="pf_occupation_placeholder">Врач</string>
    <string name="pf_profileName_placeholder">Константинов Денис</string>
    <string name="pf_birthday_placeholder">01 января 0001</string>
    <string name="nf_title">Новости</string>
    <string name="nfi_event_title_placeholder">Название мероприятия</string>
    <string name="nfi_time_left_placeholder">Осталось 13 дней (21.09 – 20.10)</string>
    <string name="nfi_event_description_placeholder">Дубовская школа-интернат для детей
    с ограниченными возможностями здоровья стала первой в области …</string>
    <string name="event_details_title_placeholder">Спонсоры отремонтируют школу интернат</string>
    <string name="ed_clothes_title">Помочь вещами</string>
    <string name="ed_volunteer_title">Стать волонтером</string>
    <string name="ed_prof_help_title">Проф. помощь</string>
    <string name="ed_money_title">Помочь деньгами</string>
    <string name="ed_subtitle_placeholder">Подзаголовок</string>
    <string name="ed_estimated_time_placeholder">Осталось времени</string>
    <string name="ed_organizer_placeholder">Организатор</string>
    <string name="ed_location_placeholder">Расположение</string>
    <string name="ed_phones_placeholder">+79999999999</string>
    <string name="ed_mail">У вас есть вопросы? Напишите нам</string>
    <string name="ed_description_placeholder">ОписаниеОписаниеОписаниеОписаниеОписаниеОписаниеОписаниеОписаниеОписаниеОписание
    ОписаниеОписаниеОписаниеОписаниеОписаниеОписаниеОписаниеОписаниеОписаниеОписаниеОписаниеОписаниеОписаниеОписаниеОписание
    ОписаниеОписаниеОписаниеОписаниеОписаниеОписаниеОписаниеОписаниеОписаниеОписаниеОписаниеОписаниеОписаниеОписаниеОписание</string>
    <plurals name="days_plurals">
        <item quantity="zero">дней</item>
        <item quantity="one">день</item>
        <item quantity="two">дня</item>
        <item quantity="few">дня</item>
        <item quantity="many">дней</item>
        <item quantity="other">дней</item>
    </plurals>
    <plurals name="days_left_plurals">
        <item quantity="zero">Осталось</item>
        <item quantity="one">Остался</item>
        <item quantity="two">Осталось</item>
        <item quantity="few">Осталось</item>
        <item quantity="many">Осталось</item>
        <item quantity="other">Осталось</item>
    </plurals>
    <string name="nf_event_finished">Мероприятие завершено</string>
    <string name="ed_friends_content_desc">edFriendsPic</string>
    <string name="content_desc_ed_photo">edPhotoPic</string>
    <string name="content_desc_event_image">eventImagePic</string>
    <string name="content_desc_eventBack">eventBack</string>
    <string name="content_desc_pic">picHere</string>
</resources>