<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pale_grey"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/logo_icon"
        android:layout_width="@dimen/logo_icon_width"
        android:layout_height="@dimen/logo_icon_height"
        android:contentDescription="@string/logo_icon_description"
        android:translationX="@dimen/logo_icon_coordX"
        android:translationY="@dimen/logo_icon_coordY"
        app:srcCompat="@drawable/icon_logo" />

    <ImageView
        android:id="@+id/logo_mss"
        android:layout_width="@dimen/logo_mss_width"
        android:layout_height="@dimen/logo_mss_height"
        android:contentDescription="@string/logo_mss_description"
        android:translationX="@dimen/logo_mss_coordX"
        android:translationY="@dimen/logo_mss_coordY"
        app:srcCompat="@drawable/logo_mss" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="@dimen/progress_bar_size"
        android:layout_height="@dimen/progress_bar_size"
        android:translationX="@dimen/progress_bar_coordX"
        android:translationY="@dimen/progress_bar_coordY"></ProgressBar>

    <TextView
        android:id="@+id/loading_text"
        style="@style/TextStyle3"
        android:layout_width="@dimen/loading_text_width"
        android:layout_height="@dimen/loading_text_height"
        android:fontFamily="@font/officina_sans_scc_extrabold"
        android:text="@string/loading_text"
        android:translationX="@dimen/loading_text_coordX"
        android:translationY="@dimen/loading_text_coordY" />

</RelativeLayout>
