<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:accessibilityLiveRegion="assertive"
    android:baselineAligned="true"
    android:fadingEdge="horizontal"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/event_details_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/leaf"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        android:title="@string/event_details_title_placeholder"
        app:buttonGravity="center_vertical">

        <Button
            android:id="@+id/ed_back_btn"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:background="@drawable/back"
            android:gravity="center_vertical"
            android:onClick="finishActivity"></Button>

        <TextView
            android:id="@+id/ed_title"
            style="@style/TitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="280dp"
            android:ellipsize="none"
            android:gravity="start"
            android:paddingStart="2dp"
            android:paddingEnd="2dp"
            android:requiresFadingEdge="horizontal"
            android:singleLine="true"
            android:text="@string/event_details_title_placeholder"></TextView>

        <Button
            android:id="@+id/ed_share_btn"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:background="@drawable/icon_share_btn"
            android:gravity="end"
            android:padding="1dp"></Button>
    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/ed_subtitle"
        style="@style/TextStyle6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:paddingStart="@dimen/ed_global_horizontal_padding"
        android:paddingTop="10dp"
        android:paddingEnd="@dimen/ed_global_horizontal_padding"
        android:paddingBottom="10dp"
        android:text="@string/ed_subtitle_placeholder" />

    <TextView
        android:id="@+id/ed_event_date"
        style="@style/TextStyle4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawablePadding="2dp"
        android:gravity="center|start"
        android:paddingStart="@dimen/ed_global_horizontal_padding"
        android:paddingTop="5dp"
        android:paddingEnd="@dimen/ed_global_horizontal_padding"
        android:paddingBottom="10dp"
        android:text="@string/ed_estimated_time_placeholder"
        app:drawableStartCompat="@drawable/icon_calendar"
        app:drawableTint="@color/grey"
        app:drawableTintMode="src_in" />

    <TextView
        android:id="@+id/ed_organizer"
        style="@style/smallBlackText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/ed_global_horizontal_padding"
        android:paddingEnd="@dimen/ed_global_horizontal_padding"
        android:paddingBottom="10dp"
        android:text="@string/ed_organizer_placeholder" />

    <TextView
        android:id="@+id/ed_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawablePadding="10dp"
        android:gravity="center|start"
        android:paddingStart="@dimen/ed_global_horizontal_padding"
        android:paddingTop="5dp"
        android:paddingEnd="@dimen/ed_global_horizontal_padding"
        android:paddingBottom="10dp"
        android:text="@string/ed_location_placeholder"
        app:drawableStartCompat="@drawable/ed_icon_location"
        app:drawableTint="@color/blue_grey" />

    <TextView
        android:id="@+id/ed_phones"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawablePadding="10dp"
        android:gravity="center|start|center_vertical"
        android:paddingStart="@dimen/ed_global_horizontal_padding"
        android:paddingTop="5dp"
        android:paddingEnd="@dimen/ed_global_horizontal_padding"
        android:paddingBottom="10dp"
        android:text="@string/ed_phones_placeholder"
        app:drawableStartCompat="@drawable/ed_icon_phone"
        app:drawableTint="@color/blue_grey" />

    <TextView
        android:id="@+id/ed_mail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawablePadding="10dp"
        android:gravity="start|center_vertical"
        android:paddingStart="@dimen/ed_global_horizontal_padding"
        android:paddingTop="10dp"
        android:paddingEnd="@dimen/ed_global_horizontal_padding"
        android:paddingBottom="10dp"
        android:text="@string/ed_mail"
        app:drawableStartCompat="@drawable/ed_icon_mail"
        app:drawableTint="@color/blue_grey">

    </TextView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/ed_images_recycler"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:paddingStart="@dimen/ed_global_horizontal_padding"
        android:paddingEnd="@dimen/ed_global_horizontal_padding">

    </androidx.recyclerview.widget.RecyclerView>

    <TextView
        android:id="@+id/ed_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fadingEdge="vertical"
        android:paddingStart="@dimen/ed_global_horizontal_padding"
        android:paddingTop="10dp"
        android:paddingEnd="@dimen/ed_global_horizontal_padding"
        android:paddingBottom="10dp"
        android:scrollHorizontally="true"
        android:text="@string/ed_description_placeholder" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/ed_friends_recycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_grey"
        android:paddingStart="@dimen/ed_global_horizontal_padding"
        android:paddingEnd="@dimen/ed_global_horizontal_padding" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/ed_bottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_weight="1"
        android:background="@color/white"
        android:isScrollContainer="false"
        android:longClickable="false"
        android:saveEnabled="false"
        android:scrollbarAlwaysDrawHorizontalTrack="false"
        android:scrollbarAlwaysDrawVerticalTrack="false"
        android:soundEffectsEnabled="false"
        app:itemHorizontalTranslationEnabled="false"
        app:itemIconTint="@color/ed_actions_color_selector"
        app:itemTextColor="@color/ed_actions_color_selector"
        app:labelVisibilityMode="labeled"
        app:menu="@menu/event_details_menu" />

</LinearLayout>