<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"


    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:textAlignment="center">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/pf_toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/leaf"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/pf_occupation_place"
        style="@style/TextStyle5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/pf_occupation_placeholder"
        app:layout_constraintBottom_toTopOf="@+id/pf_notifications_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.042"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/pf_occupation_title"
        style="@style/pfSmallTitles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/pf_occupation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.054"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pf_birthday_place" />

    <TextView
        android:id="@+id/pf_title"
        style="@style/TitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_text"
        app:layout_constraintBottom_toBottomOf="@+id/pf_toolbar"
        app:layout_constraintEnd_toEndOf="@+id/pf_toolbar"
        app:layout_constraintStart_toStartOf="@+id/pf_toolbar"
        app:layout_constraintTop_toTopOf="@+id/pf_toolbar" />

    <TextView
        android:id="@+id/pf_profileName"
        style="@style/ProfileNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="120dp"
        android:text="@string/pf_profileName_placeholder"
        app:layout_constraintBottom_toTopOf="@+id/divider2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.091"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/pf_notifications_text"
        style="@style/TextStyle5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="8dp"
        android:text="@string/pf_receive_push_notifications"
        app:layout_constraintBottom_toTopOf="@+id/divider2"
        app:layout_constraintEnd_toStartOf="@+id/pf_notifications_switch"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pf_profileName"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/pf_birthday_title"
        style="@style/pfSmallTitles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/pf_birthday"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.049"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pf_profileName" />

    <TextView
        android:id="@+id/pf_birthday_place"
        style="@style/TextStyle5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pf_birthday_placeholder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.054"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pf_birthday_title" />

    <TextView
        android:id="@+id/pf_friends_title"
        style="@style/pfSmallTitles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pf_friends_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.044"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider2" />

    <Button
        android:id="@+id/pf_edit_button"
        android:layout_width="18dp"
        android:layout_height="18dp"
        android:background="@drawable/edit_button"
        app:layout_constraintBottom_toBottomOf="@+id/pf_toolbar"
        app:layout_constraintEnd_toEndOf="@+id/pf_toolbar"
        app:layout_constraintHorizontal_bias="0.737"
        app:layout_constraintStart_toEndOf="@id/pf_title"
        app:layout_constraintTop_toTopOf="@+id/pf_toolbar"
        app:layout_constraintVertical_bias="0.5" />

    <ImageView
        android:id="@+id/pf_profile_image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/image_man"
        android:contentDescription="profile_image"
        app:layout_constraintBottom_toTopOf="@+id/pf_profileName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pf_toolbar" />

    <View
        android:id="@+id/divider"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pf_toolbar"
        app:layout_constraintVertical_bias="0.893" />

    <View
        android:id="@+id/divider2"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toTopOf="@+id/divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pf_toolbar"
        app:layout_constraintVertical_bias="0.721" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/pf_RecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pf_friends_title" />

    <Button
        android:id="@+id/pf_logout_button"
        style="@style/LogoutButtonTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/leaf"
        android:paddingStart="10sp"
        android:paddingEnd="10sp"
        android:text="@string/pf_exit_account"
        android:textAlignment="center"
        android:textAppearance="@style/TextStyle6"
        android:textColor="@color/white"
        android:theme="@style/AppTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider"
        app:layout_constraintVertical_bias="0.636" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/pf_notifications_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="4dp"
        android:scaleX="0.8"
        android:scaleY="0.8"
        app:layout_constraintBottom_toTopOf="@+id/divider2"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>