<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/sf_toolbar"
        android:layout_width="0dp"
        android:layout_height="129dp"
        android:background="@color/leaf"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/sf_search_field"
        android:layout_width="353dp"
        android:layout_height="52dp"
        android:background="@color/white"
        android:drawableStart="@drawable/icon_search"
        android:drawableEnd="@drawable/icon_mic"
        android:ems="10"
        android:hint="@string/sf_search_hint"
        android:inputType="none"
        android:singleLine="true"
        app:layout_constraintBottom_toTopOf="@+id/sf_tabs"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/sf_toolbar" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/sf_tabs"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/sf_toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:tabIndicatorColor="@color/macaroni_and_cheese"
        app:tabTextAppearance="@android:style/TextAppearance.Widget.TabWidget"
        app:tabTextColor="@color/white">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/sf_tab_events"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sf_tab_title_events" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/sf_tab_NKO"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sf_tab_title_NKO" />
    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/sf_viewPager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/light_grey_two"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sf_toolbar"
        app:layout_constraintVertical_bias="1.0">

    </androidx.viewpager.widget.ViewPager>

</androidx.constraintlayout.widget.ConstraintLayout>